--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,17 @@ django-modeltranslation==0.10.1
 django-solo==1.1.0
 django-storages-redux==1.3
 django-taggit==0.17.1
+django-taggit-serializer==0.1.5
+django-uuslug==1.1.6
 djangorestframework==3.2.3
 httplib2==0.9.1
 Markdown==2.6.2
 nose==1.3.7
 Pillow==2.9.0
 psycopg2==2.6.1
+python-dateutil==2.4.2
+python-slugify==1.1.4
 pytz==2015.4
 simplejson==3.8.0
+six==1.9.0
+Unidecode==0.4.18
