--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto==2.38.0
 Collectfast==0.2.3
 conekta==1.2
 Django==1.8.4
+django-cors-headers==1.1.0
 django-countries==3.3
 django-environ==0.3.0
 django-filter==0.11.0
@@ -17,9 +18,7 @@ Markdown==2.6.2
 nose==1.3.7
 Pillow==2.9.0
 psycopg2==2.6.1
-python-dateutil==2.4.2
 python-slugify==1.1.4
 pytz==2015.4
 simplejson==3.8.0
-six==1.9.0
 Unidecode==0.4.18
