--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,16 @@ django-taggit==0.17.1
 django-taggit-serializer==0.1.5
 django-uuslug==1.1.6
 djangorestframework==3.2.3
+gunicorn==19.3.0
 httplib2==0.9.1
 Markdown==2.6.2
 nose==1.3.7
 Pillow==2.9.0
 psycopg2==2.6.1
+python-dateutil==2.4.2
 python-slugify==1.1.4
 pytz==2015.4
 simplejson==3.8.0
+six==1.10.0
 Unidecode==0.4.18
+wheel==0.24.0
